Fix for carousel scrollbar

--- a/front-end/src/bookViewers/carousel.css
+++ b/front-end/src/bookViewers/carousel.css
@@ -8,30 +8,30 @@
 }
 .carouselList li{
     display: inline-block;
-    width:165px;
+
     padding:0;
     margin: 0 0 30px;
 
 }
 
 /* width */
-::-webkit-scrollbar {
+.carouselList::-webkit-scrollbar {
     width: 10px;
     height: 15px;
     margin-left: 10%;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+.carouselList::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+.carouselList::-webkit-scrollbar-thumb {
     background: #88cb01;
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+.carouselList::-webkit-scrollbar-thumb:hover {
     background: #70a701;
 }
